# socker

./: .deny.toml  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  README.md  justfile
lib/: Cargo.toml
lib/src/: codec.rs  lib.rs
lib/src/socks5/: mod.rs
lib/src/socks5/client/: mod.rs  tokio.rs
lib/src/socks5/proto/: messages.rs  mod.rs
lib/src/socks5/server/: mod.rs  tokio.rs
